--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,12 @@
         <artifactId>lombok</artifactId>
        </dependency>
 
+       <!-- validation依赖 -->
+        <dependency>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
 
 
 
