--- a/pom.xml
+++ b/pom.xml
@@ -52,14 +52,25 @@
           <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
 
+        <!-- java-JWT坐标 -->
+         <dependency>
+          <groupId>com.auth0</groupId>
+          <artifactId>java-jwt</artifactId>
+          <version>4.4.0</version>
+         </dependency>
 
 
 
-    <dependency>
+    <!-- 单元测试的坐标 -->
+     <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-test</artifactId>
+     </dependency>
+    <!-- <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
-    </dependency>
+    </dependency> -->
   </dependencies>
 </project>
